ArgoCD GitOps/Laravel + Worker/deployments/backend-laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-laravel-ingress
  labels:
    name: backend-laravel-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: api-laravel.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: laravel-svc
            port: 
              number: 80
